--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>My first web page!</title>
     </head>
   <body>
+    <h1>Chapter 1.</h1>
 Hello there, awesome person!
     </body>
   </html>
