--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Chapter 1.</h1>
 Hello there, awesome person!
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYXVTbxmHQuOogxDeNx7U6z7neHX4kOQPZEBLG5nzQZoMMhkFN">
     </body>
   </html>
