--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <body>
     <h1>Chapter 1.</h1>
 Hello there, awesome person!
+    <ol>
+      <li>ya.ru</li>
+      <li>gmail.com</li>
+      <li>vk.ru</li>
+      </ol>
+    <ul>
+      <li>google.com</li>            
+      <li>yahoo.com</li>
+      <li>amazon.com</li>
+      </ul>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYXVTbxmHQuOogxDeNx7U6z7neHX4kOQPZEBLG5nzQZoMMhkFN">
     </body>
   </html>
