--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>My first web page!</title>
+    <link rel="stylesheet" href="style.css">
     </head>
   <body>
     <h1>Chapter 1.</h1>
